--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-mongoose": "^0.1.0",
     "hbs": "~3.1.0",
+    "mongoose": "^4.3.3",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "passport": "^0.3.2",
+    "serve-favicon": "~2.3.0",
+    "sliced": "^1.0.1"
   }
 }
