--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-mongoose": "^0.1.0",
@@ -16,6 +17,7 @@
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "serve-favicon": "~2.3.0",
+    "session-mongoose": "^0.5.2",
     "sliced": "^1.0.1"
   }
 }
